<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtUnosImena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/UnosImena"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtIgrac1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/igrac1"
        android:textSize="20sp"
        android:layout_below="@+id/txtUnosImena"
        android:layout_marginTop="33dp"
        android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/txtIgrac2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/igrac2"
        android:textSize="20sp"
        android:layout_below="@+id/txtIgrac1"
        android:layout_marginTop="33dp"
        android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/txtIgrac3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtIgrac2"
        android:layout_marginStart="30dp"
        android:layout_marginTop="33dp"
        android:text="@string/igrac3"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtIgrac4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtIgrac3"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/igrac4"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtIgrac5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtIgrac4"
        android:layout_marginStart="30dp"
        android:layout_marginTop="33dp"
        android:text="@string/igrac5"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtIgrac6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtIgrac5"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:text="@string/igrac6"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnPotvrdi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtIgrac6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/btnPotvrdi"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/edtUnos1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtUnosImena"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/hintIme"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtUnos2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtIgrac1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/hintIme"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtUnos3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtIgrac2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/hintIme"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtUnos4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtIgrac3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/hintIme"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtUnos5"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtIgrac4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/hintIme"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtUnos6"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtIgrac5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/hintIme"
        android:textSize="18sp" />


</RelativeLayout>